--- a/08-B-spatial-ordination.html
+++ b/08-B-spatial-ordination.html
@@ -12,7 +12,7 @@
 <meta name="author" content="Jes" />
 
 
-<title>Bayesian spatial analysis</title>
+<title>Ordination approach to spatial analysis</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -424,13 +424,13 @@ div.tocify {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
-      <a href="08-A-spatial-autocorrelation.html">Spatial autocorrelation</a>
+      <a href="08-A-spatial-regression.html">Spatial regression</a>
     </li>
     <li>
-      <a href="08-B-spatial-filters.html">Spatial filters</a>
+      <a href="08-B-spatial-ordination.html">Ordination approach to spatial analysis</a>
     </li>
     <li>
-      <a href="08-C-bayesian-spatial.html">Bayesian spatial analysis</a>
+      <a href="08-C-mapping.html">Visualizing spatial data</a>
     </li>
   </ul>
 </li>
@@ -503,7 +503,7 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">Bayesian spatial analysis</h1>
+<h1 class="title toc-ignore">Ordination approach to spatial analysis</h1>
 <h4 class="author"><em>Jes</em></h4>
 
 </div>
@@ -511,7 +511,7 @@ div.tocify {
 
 <p><strong>Assigned Reading:</strong></p>
 <blockquote>
-<p>TBD: will use spBayes or R-INLA</p>
+<p>Chapter 7 from: Borcard, D., Gillet, F. and Legendre, P. 2011. <em>Numerical Ecology with R.</em> Springer. <a href="https://link.springer.com/book/10.1007/978-1-4419-7976-6">link</a></p>
 </blockquote>
 <div id="key-points" class="section level3">
 <h3>Key Points</h3>
