--- a/05-B-Bayesian-priors.html
+++ b/05-B-Bayesian-priors.html
@@ -424,13 +424,13 @@ div.tocify {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
-      <a href="08-A-spatial-autocorrelation.html">Spatial autocorrelation</a>
+      <a href="08-A-spatial-regression.html">Spatial regression</a>
     </li>
     <li>
-      <a href="08-B-spatial-filters.html">Spatial filters</a>
+      <a href="08-B-spatial-ordination.html">Ordination approach to spatial analysis</a>
     </li>
     <li>
-      <a href="08-C-bayesian-spatial.html">Bayesian spatial analysis</a>
+      <a href="08-C-mapping.html">Visualizing spatial data</a>
     </li>
   </ul>
 </li>
