--- a/08-A-spatial-regression.html
+++ b/08-A-spatial-regression.html
@@ -12,7 +12,7 @@
 <meta name="author" content="Jes" />
 
 
-<title>Spatial autocorrelation</title>
+<title>Spatial regression</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -424,13 +424,13 @@ div.tocify {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
-      <a href="08-A-spatial-autocorrelation.html">Spatial autocorrelation</a>
+      <a href="08-A-spatial-regression.html">Spatial regression</a>
     </li>
     <li>
-      <a href="08-B-spatial-filters.html">Spatial filters</a>
+      <a href="08-B-spatial-ordination.html">Ordination approach to spatial analysis</a>
     </li>
     <li>
-      <a href="08-C-bayesian-spatial.html">Bayesian spatial analysis</a>
+      <a href="08-C-mapping.html">Visualizing spatial data</a>
     </li>
   </ul>
 </li>
@@ -503,7 +503,7 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">Spatial autocorrelation</h1>
+<h1 class="title toc-ignore">Spatial regression</h1>
 <h4 class="author"><em>Jes</em></h4>
 
 </div>
@@ -513,9 +513,16 @@ div.tocify {
 <blockquote>
 <p>Chapters 6 &amp; 7 from: Zuur, A. F., Ieno, E. N., Walker, N., Saveliev, A. A. and Smith, G. M. 2009. <em>Mixed Effects Models and Extensions in Ecology with R.</em> Springer. <a href="https://link-springer-com.stanford.idm.oclc.org/book/10.1007%2F978-0-387-87458-6">link</a></p>
 </blockquote>
-<p><strong>Additional References:</strong></p>
+<p><strong>Optional Readings:</strong></p>
+<blockquote>
+<p>Beale, C. M., Lennon, J. J., Yearsley, J. M., Brewer, M. J. and Elston, D. A. 2010. Regression analysis of spatial data. <em>Ecology Letters</em> <strong>13</strong>: 246-264. <a href="http://dx.doi.org/10.1111/j.1461-0248.2009.01422.x">DOI: 10.1111/j.1461-0248.2009.01422.x</a></p>
+<p>Hawkins, B. A. 2012. Eight (and a half) deadly sins of spatial analysis. <em>Journal of Biogeography</em> <strong>39</strong>: 1-9. <a href="http://dx.doi.org/10.1111/j.1365-2699.2011.02637.x">DOI: 10.1111/j.1365-2699.2011.02637.x</a></p>
+</blockquote>
 <div id="key-points" class="section level3">
 <h3>Key Points</h3>
+<ul>
+<li>Spatial dependence can be induced and modeled in several ways.</li>
+</ul>
 </div>
 <div id="analysis-example" class="section level3">
 <h3>Analysis Example</h3>
