--- a/08-C-mapping.html
+++ b/08-C-mapping.html
@@ -12,7 +12,7 @@
 <meta name="author" content="Jes" />
 
 
-<title>Spatial filters</title>
+<title>Visualizing spatial data</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -424,13 +424,13 @@ div.tocify {
   </a>
   <ul class="dropdown-menu" role="menu">
     <li>
-      <a href="08-A-spatial-autocorrelation.html">Spatial autocorrelation</a>
+      <a href="08-A-spatial-regression.html">Spatial regression</a>
     </li>
     <li>
-      <a href="08-B-spatial-filters.html">Spatial filters</a>
+      <a href="08-B-spatial-ordination.html">Ordination approach to spatial analysis</a>
     </li>
     <li>
-      <a href="08-C-bayesian-spatial.html">Bayesian spatial analysis</a>
+      <a href="08-C-mapping.html">Visualizing spatial data</a>
     </li>
   </ul>
 </li>
@@ -503,7 +503,7 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">Spatial filters</h1>
+<h1 class="title toc-ignore">Visualizing spatial data</h1>
 <h4 class="author"><em>Jes</em></h4>
 
 </div>
@@ -511,7 +511,12 @@ div.tocify {
 
 <p><strong>Assigned Reading:</strong></p>
 <blockquote>
-<p>Chapter 7 from: Borcard, D., Gillet, F. and Legendre, P. 2011. <em>Numerical Ecology with R.</em> Springer. <a href="https://link.springer.com/book/10.1007/978-1-4419-7976-6">link</a></p>
+<p>Chapter 3 from: Bivand, R. S., Pebesma, E., Gomez-Rubio, V. 2013. <em>Applied Spatial Data Analysis with R</em>, 2nd ed. Springer. <a href="https://link-springer-com.stanford.idm.oclc.org/book/10.1007%2F978-1-4614-7618-4">Stanford Full Text</a></p>
+</blockquote>
+<p><strong>Suggested Reading:</strong></p>
+<blockquote>
+<p>Chapters 2 and 8 from: Bivand, R. S., Pebesma, E., Gomez-Rubio, V. 2013. <em>Applied Spatial Data Analysis with R</em>, 2nd ed. Springer. <a href="https://link-springer-com.stanford.idm.oclc.org/book/10.1007%2F978-1-4614-7618-4">Stanford Full Text</a></p>
+<p><em>Chapter 2 is an overview of how R handles spatial data. Chapter 8 is useful for mapping model-based spatial predictions.</em></p>
 </blockquote>
 <div id="key-points" class="section level3">
 <h3>Key Points</h3>
