Changed R markdown lesson to use the example lesson files.

--- a/01-B-Rmarkdown-intro.html
+++ b/01-B-Rmarkdown-intro.html
@@ -577,10 +577,10 @@ div.tocify {
 <p>Today we will learn option 2 and there will be an optional session on Wednesday of Week 2 for anyone who wishes to learn how to use git for option 1. These two options are summarized on the <a href="file:///C:/Users/jrcoyle/Documents/Stanford/BIO202/GitHub/00-computer-setup.html#editing_the_course_website">Editing the Course Website</a> section of the Computer Setup page on the course website.</p>
 <div id="downloading-files-from-github" class="section level4">
 <h4>Downloading files from GitHub</h4>
-<p>Go to the <a href="https://github.com/FukamiLab/BIO202">course website GitHub repository</a>. Notice that you can choose to download all of the files as a zip file by clicking the green “Clone or download” button in the upper right. You will only need to edit one (or a few) pages, so let’s just download one file rather than the whole website. Click on the R markdown file corresponding to yesterday’s lesson: <code>01-A-R-intro.Rmd</code>, then click the ‘Raw’ button that appears at the top right corner of the document viewer on the page that loads. This will take you to a page that displays the text in the file. Download the page as a .Rmd file (remove the .txt extension that your browser will attempt to append) and save it somewhere useful on your computer (e.g. the folder you have made for this class, not Downloads or Desktop). Find the file on your computer and open it. It should open in RStudio.</p>
+<p>Go to the <a href="https://github.com/FukamiLab/BIO202">course website GitHub repository</a>. Notice that you can choose to download all of the files as a zip file by clicking the green “Clone or download” button in the upper right. You will only need to edit one (or a few) pages, so let’s just download one file rather than the whole website. Click on the R markdown file corresponding to yesterday’s lesson: <code>00-example-lesson.Rmd</code>, then click the ‘Raw’ button that appears at the top right corner of the document viewer on the page that loads. This will take you to a page that displays the text in the file. Download the page as a .Rmd file (remove the .txt extension that your browser will attempt to append) and save it somewhere useful on your computer (e.g. the folder you have made for this class, not Downloads or Desktop). Find the file on your computer and open it. It should open in RStudio.</p>
 <blockquote>
 <p><strong>Exercise:</strong></p>
-<p>Compare the contents of the .Rmd file to what you see on the course website.</p>
+<p>Compare the contents of the .Rmd file to what you see on the course website: <a href="http://fukamilab.github.io/BIO202/00-example-lesson.html" class="uri">http://fukamilab.github.io/BIO202/00-example-lesson.html</a> .</p>
 <ul>
 <li>What is the same?</li>
 <li>What is different?</li>
@@ -598,7 +598,7 @@ div.tocify {
 </ol>
 <blockquote>
 <p><strong>Exercise:</strong></p>
-<p>Find each of these three pieces in the Introduction to R lesson document.</p>
+<p>Find each of these three pieces in the example lesson document.</p>
 </blockquote>
 <p>You will not need to edit the header for any of the course webpages, other than to add you name to the list of authors. Check out the following resources if you are interested in generating your own markdown documents from scratch and want to learn more about how to change the format of the output document:</p>
 <ul>
@@ -617,7 +617,6 @@ div.tocify {
 <li>bold text and italic text</li>
 <li>a list</li>
 <li>a numbered list</li>
-<li>a webpage link</li>
 <li>text that links to a webpage</li>
 <li>text formatted as code that is not evaluated (verbatim code)</li>
 </ul>
@@ -639,7 +638,7 @@ my_kg &lt;-<span class="st"> </span>my_lbs *<span class="st"> </span><span class
 <p>If you click the ‘Run’ button at the top of the document you can choose to run all code chunks in the document (or just those above or below your cursor).</p>
 <blockquote>
 <p><strong>Exercise:</strong></p>
-<p>Run a line of code in the Introduction to R Rmd file. What happens in the Console window? What happens in the Environment window?</p>
+<p>Run a line of code in the example lesson Rmd file. What happens in the Console window? What happens in the Environment window?</p>
 <p>Now try running a line of text from this document. What happens?</p>
 <p>What happens when you use the ‘Run’ button to run all code chunks in the document?</p>
 </blockquote>
@@ -669,10 +668,8 @@ my_kg &lt;-<span class="st"> </span>my_lbs *<span class="st"> </span><span class
 <blockquote>
 <p><strong>Exercise:</strong></p>
 <ol style="list-style-type: decimal">
-<li>Download the 00-example-lesson.Rmd file from the course website GitHub repository.</li>
-<li>Render the .Rmd file to html. Did it work? Look in the folder where you saved the 00-example.lesson.Rmd file. What has changed?</li>
-<li>Add a new section to the document with markdown-formatted text and a new R code chunk. Render the document again.</li>
-<li>Open the html file with your web browser to see what your changes would look like online. How does what you see differ from what is shown at <a href="https://fukamilab.github.io/BIO202/00-example-lesson.html" class="uri">https://fukamilab.github.io/BIO202/00-example-lesson.html</a></li>
+<li>Add a new section to the example lesson Rmd document with markdown-formatted text and a new R code chunk. Render the document again.</li>
+<li>Open the html file with your web browser to see what your changes would look like online. How does what you see differ from what is shown at <a href="https://fukamilab.github.io/BIO202/00-example-lesson.html" class="uri">https://fukamilab.github.io/BIO202/00-example-lesson.html</a> ?</li>
 </ol>
 </blockquote>
 </div>
