Added who to do which topics

--- a/index.html
+++ b/index.html
@@ -602,7 +602,7 @@ div.tocify {
 <td>Oct. 9</td>
 <td>Topic 1. <a href="03-A-data-exploration.html">Data exploration</a></td>
 <td>Tad</td>
-<td></td>
+<td>Priscilla</td>
 </tr>
 <tr class="even">
 <td></td>
@@ -610,7 +610,7 @@ div.tocify {
 <td>Oct. 11</td>
 <td>Topic 2. <a href="03-B-linear-models.html">Linear models</a></td>
 <td>Tad</td>
-<td></td>
+<td>Sandra</td>
 </tr>
 <tr class="odd">
 <td></td>
@@ -618,7 +618,7 @@ div.tocify {
 <td>Oct. 13</td>
 <td>Topic 3. <a href="03-C-heterogeneity.html">Dealing with heterogeneity</a></td>
 <td>Tad</td>
-<td></td>
+<td>Anna</td>
 </tr>
 <tr class="even">
 <td>4</td>
@@ -626,7 +626,7 @@ div.tocify {
 <td>Oct. 16</td>
 <td>Topic 4. <a href="04-A-mixed-models.html">Mixed-effects models with nested data</a></td>
 <td>Tad</td>
-<td></td>
+<td>Beth</td>
 </tr>
 <tr class="odd">
 <td></td>
@@ -634,7 +634,7 @@ div.tocify {
 <td>Oct. 18</td>
 <td>Topic 5. <a href="04-B-binary-data.html">GLM with binary &amp; proportional data</a></td>
 <td>Tad</td>
-<td></td>
+<td>Meghan</td>
 </tr>
 <tr class="even">
 <td></td>
@@ -642,7 +642,7 @@ div.tocify {
 <td>Oct. 20</td>
 <td>Topic 6. <a href="04-C-zero-data.html">GLM with zero-inflated data</a></td>
 <td>Tad</td>
-<td></td>
+<td>Nick</td>
 </tr>
 <tr class="odd">
 <td>5</td>
@@ -650,7 +650,7 @@ div.tocify {
 <td>Oct. 23</td>
 <td>Topic 7. <a href="05-A-Bayesian-linear-models.html">Bayesian linear models</a></td>
 <td>Jes</td>
-<td></td>
+<td>Jamie</td>
 </tr>
 <tr class="even">
 <td></td>
@@ -658,7 +658,7 @@ div.tocify {
 <td>Oct. 25</td>
 <td>Topic 8. <a href="05-B-Bayesian-priors.html">Bayesian inference with prior information</a></td>
 <td>Jes</td>
-<td></td>
+<td>Nicole</td>
 </tr>
 <tr class="odd">
 <td></td>
@@ -666,7 +666,7 @@ div.tocify {
 <td>Oct. 27</td>
 <td>Topic 9. <a href="05-C-Advanced-bayesian-example.html">Advanced Bayesian model example</a></td>
 <td>Jes</td>
-<td></td>
+<td>Lizzie</td>
 </tr>
 <tr class="even">
 <td>6</td>
@@ -674,7 +674,7 @@ div.tocify {
 <td>Oct. 30</td>
 <td>Topic 10. <a href="06-A-unconstrained-ordination.html">Unconstrained ordination</a></td>
 <td>Tad</td>
-<td></td>
+<td>Anna</td>
 </tr>
 <tr class="odd">
 <td></td>
@@ -682,15 +682,15 @@ div.tocify {
 <td>Nov. 1</td>
 <td>Topic 11. <a href="06-B-constrained-ordination.html">Constrained ordination</a></td>
 <td>Tad</td>
-<td></td>
+<td>Meghan</td>
 </tr>
 <tr class="even">
 <td></td>
 <td>Fri</td>
 <td>Nov. 3</td>
-<td>Topic 12. <a href="06-C-matrix-comparison.html">Comparing multivariate data</a></td>
+<td>Topic 12. <a href="06-C-matrix-comparison.html">Comparing multivariate data</a> (symmetric methods)</td>
 <td>Jes</td>
-<td></td>
+<td>Priscilla</td>
 </tr>
 <tr class="odd">
 <td>7</td>
@@ -722,7 +722,7 @@ div.tocify {
 <td>Nov. 13</td>
 <td>Topic 13. <a href="08-A-spatial-regression.html">Spatial regression</a></td>
 <td>Jes</td>
-<td></td>
+<td>Marissa</td>
 </tr>
 <tr class="odd">
 <td></td>
@@ -730,7 +730,7 @@ div.tocify {
 <td>Nov. 15</td>
 <td>Topic 14. <a href="08-B-spatial-ordination.html">Ordination approach to spatial analysis</a></td>
 <td>Jes</td>
-<td></td>
+<td>Sandra</td>
 </tr>
 <tr class="even">
 <td></td>
@@ -738,7 +738,7 @@ div.tocify {
 <td>Nov. 17</td>
 <td>Topic 15. <a href="08-C-mapping.html">Visualization of spatial data</a></td>
 <td>Jes</td>
-<td></td>
+<td>Tyler</td>
 </tr>
 <tr class="odd">
 <td>RECESS</td>
@@ -752,24 +752,24 @@ div.tocify {
 <td>9</td>
 <td>Mon</td>
 <td>Nov. 27</td>
-<td>Topic 16. To be selected by class</td>
-<td></td>
-<td></td>
+<td>Topic 16. Selected by class: time-series analysis</td>
+<td>Lizzie</td>
+<td>Jamie</td>
 </tr>
 <tr class="odd">
 <td></td>
 <td>Wed</td>
 <td>Nov. 29</td>
-<td>Topic 17. To be selected by class</td>
-<td></td>
-<td></td>
+<td>Topic 17. Selected by class: network analysis</td>
+<td>Beth</td>
+<td>Nicole</td>
 </tr>
 <tr class="even">
 <td></td>
 <td>Fri</td>
 <td>Dec. 1</td>
-<td>Topic 18. To be selected by class</td>
-<td></td>
+<td>Topic 18. Selected by class: occupancy models</td>
+<td>Nick</td>
 <td></td>
 </tr>
 <tr class="odd">
@@ -860,7 +860,7 @@ $(document).ready(function () {
   (function () {
     var script = document.createElement("script");
     script.type = "text/javascript";
-    script.src  = "https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML";
+    script.src  = "https://mathjax.rstudio.com/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML";
     document.getElementsByTagName("head")[0].appendChild(script);
   })();
 </script>
