Fixed grammar typo.

--- a/01-A-R-intro.html
+++ b/01-A-R-intro.html
@@ -563,7 +563,7 @@ div.tocify {
 </div>
 <div id="documenting-your-code" class="section level4">
 <h4>Documenting your code</h4>
-<p>The most important part of you code is are the <em>comments</em> that document what the code is supposed to do. This is most useful for reminding you of what you are trying to accomplish in an analysis as well as for anyone else who might need to read your code.</p>
+<p>The most important part of you code are the <em>comments</em> that document what the code is supposed to do. This is most useful for reminding you of what you are trying to accomplish in an analysis as well as for anyone else who might need to read your code.</p>
 <p>Any text in an R script that follows the <code>#</code> is interpretted as a <em>comment</em>- a piece of descriptive text that doesn’t cause R to do any calculations.</p>
 <p>The best practice is to begin any R script with comments that give the title, author (with email), date, and short description of what the code does.</p>
 <blockquote>
