Minor changes to git lesson. Removed instructions for creating new GitHub repository.

--- a/02-B-git-intro.html
+++ b/02-B-git-intro.html
@@ -530,9 +530,7 @@ div.tocify {
 <div id="creating-a-github-account" class="section level4">
 <h4>Creating a GitHub account</h4>
 <p>In order to use GitHub you will first need to create an account and give yourself a username so that you can create and work on projects. Go to <a href="https://github.com/" class="uri">https://github.com/</a> and on the main screen choose a username and password. You will need to check your email to confirm your regsitration.</p>
-<p>Once you have registered an logged in using your new username and password you can get started. GitHub provides a nice tutorial on creating a new project repository (here)[<a href="https://guides.github.com/activities/hello-world/" class="uri">https://guides.github.com/activities/hello-world/</a>]. Feel free to try out this tutorial on your own.</p>
-<p>Let’s create a new repository for your class project.</p>
-<p>First click the “Start a new project” button. On the following page give the project a repository name and description. Check the box to create a README and then click “Create repository”. You will now be on the main page for your project. There is one text file in this project called README.md which contains the project name and description you wrote. We will come back to this project later.</p>
+<p>Once you have registered an logged in using your new username and password you can get started. GitHub provides a nice tutorial on creating a new project repository <a href="https://guides.github.com/activities/hello-world/">here</a>. Feel free to try out this tutorial on your own to learn how to make a repository for your class project.</p>
 </div>
 <div id="forking-an-existing-repository" class="section level4">
 <h4>Forking an existing repository</h4>
@@ -550,9 +548,9 @@ div.tocify {
 <h4>Merging changes with a pull request</h4>
 <p>You have added your name to the lesson Rmd file in your fork of the class website. Next we will transfer these changes to the FukamiLab version. We will do this using a “pull request” which is a fancy name for proposing changes. You will propose to change FukamiLab/BIO202 based on the changes you made in your-username/BIO202.</p>
 <p>Return to the main page of your fork at <code>https://github.com/your-username/BIO202</code> and click the “New pull request” button. The <em>base</em> is what you are proposing to change and the <em>head</em> is where the changes are coming from. What should the base and head be if you want to propose the changes you just made?</p>
-<p>You may nee to click “compare across forks” to make the FukamiLab master branch show up as an option. Once you have selected the base (to) and head (from) branches you can scroll down to see how the files differ. Click the green “Create pull request” button to propose these changes. You will then be prompted to create a description of your changes so that a reviewer (e.g. the instructor) knows what to look for before accepting the changes. Click the green button again to create the request.</p>
+<p>You may need to click “compare across forks” to make the FukamiLab master branch show up as an option. Once you have selected the base (to) and head (from) branches you can scroll down to see how the files differ. Click the green “Create pull request” button to propose these changes. You will then be prompted to create a description of your changes so that a reviewer (e.g. the instructor) knows what to look for before accepting the changes. Click the green button again to create the request.</p>
 <p>That’s it. Now someone will need to review your changes and accept them in order for the FukamiLab project to change.</p>
-<p>While it is useful to be able to edit files online. Usually you will want to make changes to files on your computer and then propose changes from these files to a project repository on GitHub. The best way to do this is by using a version control program called git. In the next section you will learn how to use git with RStudio to manages changes to a version of the class website files stored on your computer.</p>
+<p>While it is useful to be able to edit files online, usually you will want to make changes to files on your computer and then propose changes from these files to a project repository on GitHub. The best way to do this is by using a version control program called git. In the next section you will learn how to use git with RStudio to manages changes to a version of the class website files stored on your computer.</p>
 </div>
 </div>
 <div id="what-is-git" class="section level3">
@@ -641,10 +639,6 @@ div.tocify {
 <img src="images/github_workflow_with_rstudio.png" alt="Workflow for editing the course website with git in RStudio" />
 <p class="caption">Workflow for editing the course website with git in RStudio</p>
 </div>
-<p><strong>Suggested Additional References:</strong></p>
-<blockquote>
-
-</blockquote>
 </div>
 
 
