--- a/02-B-git-intro.html
+++ b/02-B-git-intro.html
@@ -303,6 +303,9 @@ div.tocify {
     <li>
       <a href="02-B-git-intro.html">Intro to git</a>
     </li>
+    <li>
+      <a href="02-C-student-projects.html">Project introductions</a>
+    </li>
   </ul>
 </li>
 <li class="dropdown">
@@ -412,6 +415,9 @@ div.tocify {
       <a href="07-midquarter-priscilla.html">Priscilla</a>
     </li>
     <li>
+      <a href="07-midquarter-sandra.html">Sandra</a>
+    </li>
+    <li>
       <a href="07-midquarter-tyler.html">Tyler</a>
     </li>
   </ul>
@@ -485,6 +491,9 @@ div.tocify {
     </li>
     <li>
       <a href="10-final-priscilla.html">Priscilla</a>
+    </li>
+    <li>
+      <a href="07-midquarter-sandra.html">Sandra</a>
     </li>
     <li>
       <a href="10-final-tyler.html">Tyler</a>
@@ -619,7 +628,7 @@ div.tocify {
 <h4>Editing and saving local files</h4>
 <p>Open this new version-controlled RStudio project and open the file 02-C-student-projects.Rmd. Add an entry to this file for your project that you will work on for class. To save your changes and see what the Rmd file will look like as a webpage, click the “Knit” button at the top of the script window.</p>
 <p>You have now made changes to the <em>local</em> files on you computer. Next you need to track these changes with git. To do this, click on the button on the top bar that has a green plus over a red minus over a grey circular arrow. Choose “Commit” from the drop down menu.</p>
-<p>This will open a new window that shows you all of the files that have changed since your last “commit”. First you need to select the files that you want to “stage”. This means that any changes made to these files will be recorded in this “commit”. A “commit” is a record of a set of changes. You can revert files back to the state that they were in at any particular “commit”. So, if you want to be able to revert changes to just one file, you should only stage one file each time you commit. I would suggest stagin both the .Rmd file and its accompanying .html file at the same time, since the changes you made to the Rmd file caused the changes in the html file. Click the checkbox next to the files you want to stage for this commit. Then type a brief and specific message in the Commit message box about the changes you made. Notice that the bottom window shows you the differences between the current version of the file you selected and the most recently commited version. Click the commit button when you are satisfied.</p>
+<p>This will open a new window that shows you all of the files that have changed since your last “commit”. First you need to select the files that you want to “stage”. This means that any changes made to these files will be recorded in this “commit”. A “commit” is a record of a set of changes. You can revert files back to the state that they were in at any particular “commit”. I would suggest staging both the .Rmd file and its accompanying .html file at the same time, since the changes you made to the Rmd file caused the changes in the html file. Click the checkbox next to the files you want to stage for this commit. Then type a brief and specific message in the Commit message box about the changes you made. Notice that the bottom window shows you the differences between the current version of the file you selected and the most recently commited version. Click the commit button when you are satisfied.</p>
 <p>To see all previous commits, click the “History” tab at the top of the git window. You can select any commit and see which files were changed and the changes within these files.</p>
 <div id="reverting-changes" class="section level5">
 <h5>Reverting changes</h5>
