--- a/02-C-student-projects.html
+++ b/02-C-student-projects.html
@@ -303,6 +303,9 @@ div.tocify {
     <li>
       <a href="02-B-git-intro.html">Intro to git</a>
     </li>
+    <li>
+      <a href="02-C-student-projects.html">Project introductions</a>
+    </li>
   </ul>
 </li>
 <li class="dropdown">
@@ -412,6 +415,9 @@ div.tocify {
       <a href="07-midquarter-priscilla.html">Priscilla</a>
     </li>
     <li>
+      <a href="07-midquarter-sandra.html">Sandra</a>
+    </li>
+    <li>
       <a href="07-midquarter-tyler.html">Tyler</a>
     </li>
   </ul>
@@ -487,6 +493,9 @@ div.tocify {
       <a href="10-final-priscilla.html">Priscilla</a>
     </li>
     <li>
+      <a href="07-midquarter-sandra.html">Sandra</a>
+    </li>
+    <li>
       <a href="10-final-tyler.html">Tyler</a>
     </li>
   </ul>
@@ -509,13 +518,53 @@ div.tocify {
 </div>
 
 
-<div id="student-name" class="section level4">
-<h4>Student Name</h4>
+<div id="anna" class="section level4">
+<h4>Anna</h4>
 <p><strong>Project Title</strong></p>
 <p>Brief description of the question you want to ask and the data you have to analyze it.</p>
 </div>
-<div id="student-name-1" class="section level4">
-<h4>Student Name</h4>
+<div id="beth" class="section level4">
+<h4>Beth</h4>
+<p><strong>Project Title</strong></p>
+<p>Brief description of the question you want to ask and the data you have to analyze it.</p>
+</div>
+<div id="jamie" class="section level4">
+<h4>Jamie</h4>
+<p><strong>Project Title</strong></p>
+<p>Brief description of the question you want to ask and the data you have to analyze it.</p>
+</div>
+<div id="lizzie" class="section level4">
+<h4>Lizzie</h4>
+<p><strong>Project Title</strong></p>
+<p>Brief description of the question you want to ask and the data you have to analyze it.</p>
+</div>
+<div id="marissa" class="section level4">
+<h4>Marissa</h4>
+<p><strong>Project Title</strong></p>
+<p>Brief description of the question you want to ask and the data you have to analyze it.</p>
+</div>
+<div id="meghan" class="section level4">
+<h4>Meghan</h4>
+<p><strong>Project Title</strong></p>
+<p>Brief description of the question you want to ask and the data you have to analyze it.</p>
+</div>
+<div id="nicole" class="section level4">
+<h4>Nicole</h4>
+<p><strong>Project Title</strong></p>
+<p>Brief description of the question you want to ask and the data you have to analyze it.</p>
+</div>
+<div id="priscilla" class="section level4">
+<h4>Priscilla</h4>
+<p><strong>Project Title</strong></p>
+<p>Brief description of the question you want to ask and the data you have to analyze it.</p>
+</div>
+<div id="sandra" class="section level4">
+<h4>Sandra</h4>
+<p><strong>Project Title</strong></p>
+<p>Brief description of the question you want to ask and the data you have to analyze it.</p>
+</div>
+<div id="tyler" class="section level4">
+<h4>Tyler</h4>
 <p><strong>Project Title</strong></p>
 <p>Brief description of the question you want to ask and the data you have to analyze it.</p>
 </div>
