--- a/06-B-constrained-ordination.html
+++ b/06-B-constrained-ordination.html
@@ -303,6 +303,9 @@ div.tocify {
     <li>
       <a href="02-B-git-intro.html">Intro to git</a>
     </li>
+    <li>
+      <a href="02-C-student-projects.html">Project introductions</a>
+    </li>
   </ul>
 </li>
 <li class="dropdown">
@@ -412,6 +415,9 @@ div.tocify {
       <a href="07-midquarter-priscilla.html">Priscilla</a>
     </li>
     <li>
+      <a href="07-midquarter-sandra.html">Sandra</a>
+    </li>
+    <li>
       <a href="07-midquarter-tyler.html">Tyler</a>
     </li>
   </ul>
@@ -485,6 +491,9 @@ div.tocify {
     </li>
     <li>
       <a href="10-final-priscilla.html">Priscilla</a>
+    </li>
+    <li>
+      <a href="07-midquarter-sandra.html">Sandra</a>
     </li>
     <li>
       <a href="10-final-tyler.html">Tyler</a>
