--- a/index.html
+++ b/index.html
@@ -303,6 +303,9 @@ div.tocify {
     <li>
       <a href="02-B-git-intro.html">Intro to git</a>
     </li>
+    <li>
+      <a href="02-C-student-projects.html">Project introductions</a>
+    </li>
   </ul>
 </li>
 <li class="dropdown">
@@ -412,6 +415,9 @@ div.tocify {
       <a href="07-midquarter-priscilla.html">Priscilla</a>
     </li>
     <li>
+      <a href="07-midquarter-sandra.html">Sandra</a>
+    </li>
+    <li>
       <a href="07-midquarter-tyler.html">Tyler</a>
     </li>
   </ul>
@@ -487,6 +493,9 @@ div.tocify {
       <a href="10-final-priscilla.html">Priscilla</a>
     </li>
     <li>
+      <a href="07-midquarter-sandra.html">Sandra</a>
+    </li>
+    <li>
       <a href="10-final-tyler.html">Tyler</a>
     </li>
   </ul>
@@ -518,7 +527,7 @@ div.tocify {
 <ul>
 <li>Design statistically sound data collection strategies to answer a given research questions.</li>
 <li>Choose among modern statistical tools and analyze data using R.</li>
-<li>Present results effectively usin R for peer-reviewed papers.</li>
+<li>Present results effectively using R for peer-reviewed papers.</li>
 <li>Advise colleagues about statistical analyses.</li>
 </ul>
 <p><strong>Class Format:</strong></p>
@@ -829,7 +838,7 @@ div.tocify {
 <li>Beale, C. M., Lennon, J. J., Yearsley, J. M., Brewer, M. J. and Elston, D. A. (2010), Regression analysis of spatial data. <em>Ecology Letters</em>, 13: 246-264. <a href="DOI:%5B10.1111/j.1461-0248.2009.01422.x%5D(http://dx.doi.org/10.1111/j.1461-0248.2009.01422.x)" class="uri">DOI:[10.1111/j.1461-0248.2009.01422.x](http://dx.doi.org/10.1111/j.1461-0248.2009.01422.x)</a> +Hawkins, B. A. (2012), Eight (and a half) deadly sins of spatial analysis. <em>Journal of Biogeography</em>, 39: 1-9. <a href="http://dx.doi.org/10.1111/j.1365-2699.2011.02637.x">DOI: 10.1111/j.1365-2699.2011.02637.x</a></li>
 <li>McElreath, R. (2016), <em>Statistical rethinking: a Bayesian course with examples in R and Stan</em>. CRC Press. <em>Available in the Science and Marine libraries</em> <a href="http://xcelab.net/rm/statistical-rethinking/">Author’s website</a></li>
 <li>Venables, W. N., Smith, D. M. and the R Core Team. (2012), <em>An Introduction to R: Notes on R: A Programming Environment for Data Analysis and Graphics</em>. Version 2.15.1. <a href="https://cran.r-project.org/doc/manuals/r-release/R-intro.pdf">full text</a></li>
-<li>Wagner, H. H. and Fortin, M. J. (2005), Spatial analysis of landscapes: concepts and statistics. <em>Ecology</em>, 86: 1975–1987. DOI: <a href="http://dx.doi.org/10.1890/04-0914">10.1890/04-0914</a></li>
+<li>Wagner, H. H. and Fortin, M. J. (2005), Spatial analysis of landscapes: concepts and statistics. <em>Ecology</em>, 86: 1975â€“1987. DOI: <a href="http://dx.doi.org/10.1890/04-0914">10.1890/04-0914</a></li>
 <li>Zuur, A. F., Hilbe, J. M. and Ieno, E. N. (2013), <em>A beginner’s guide to GLM and GLMM with R: a frequentist and Bayesian perspective for ecologists.</em> Highland Statistics Ltd. <a href="https://searchworks.stanford.edu/view/11749213">Stanford Library Record</a></li>
 </ul>
 </div>
@@ -860,7 +869,7 @@ $(document).ready(function () {
   (function () {
     var script = document.createElement("script");
     script.type = "text/javascript";
-    script.src  = "https://mathjax.rstudio.com/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML";
+    script.src  = "https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML";
     document.getElementsByTagName("head")[0].appendChild(script);
   })();
 </script>
