Added details for my project.

--- a/02-C-student-projects.html
+++ b/02-C-student-projects.html
@@ -560,8 +560,8 @@ div.tocify {
 </div>
 <div id="sandra" class="section level4">
 <h4>Sandra</h4>
-<p><strong>Project Title</strong></p>
-<p>Brief description of the question you want to ask and the data you have to analyze it.</p>
+<p>Spatial autocorrelation in a Pennsylvanian swamp forest</p>
+<p>I want to interrogate patterns of spatial autocorrelation of plants in a Paleozoic forest, at multiple taxonomic levels. I will use semi-quantitative data collected in a transect through a coal mine.</p>
 </div>
 <div id="tyler" class="section level4">
 <h4>Tyler</h4>
@@ -594,7 +594,7 @@ $(document).ready(function () {
   (function () {
     var script = document.createElement("script");
     script.type = "text/javascript";
-    script.src  = "https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML";
+    script.src  = "https://mathjax.rstudio.com/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML";
     document.getElementsByTagName("head")[0].appendChild(script);
   })();
 </script>
