--- a/02-C-student-projects.html
+++ b/02-C-student-projects.html
@@ -530,8 +530,9 @@ div.tocify {
 </div>
 <div id="jamie" class="section level4">
 <h4>Jamie</h4>
-<p><strong>Project Title</strong></p>
-<p>Brief description of the question you want to ask and the data you have to analyze it.</p>
+<p><strong>Drivers of coral reef community structure</strong></p>
+<p>Question:<br />
+Data:</p>
 </div>
 <div id="lizzie" class="section level4">
 <h4>Lizzie</h4>
@@ -594,7 +595,7 @@ $(document).ready(function () {
   (function () {
     var script = document.createElement("script");
     script.type = "text/javascript";
-    script.src  = "https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML";
+    script.src  = "https://mathjax.rstudio.com/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML";
     document.getElementsByTagName("head")[0].appendChild(script);
   })();
 </script>
