Added project title and description for Anna

--- a/02-C-student-projects.html
+++ b/02-C-student-projects.html
@@ -520,8 +520,8 @@ div.tocify {
 
 <div id="anna" class="section level4">
 <h4>Anna</h4>
-<p><strong>Project Title</strong></p>
-<p>Brief description of the question you want to ask and the data you have to analyze it.</p>
+<p><strong>Spatiotemporal Analysis of the San Francisco Estuary Water Column Microbiome</strong></p>
+<p>I will explore environmental drivers on archaeal and bacterial communities in bottom waters of San Francisco Bay using 16S rRNA amplicon libraries and geochemical water column data from USGS water quality cruises.</p>
 </div>
 <div id="beth" class="section level4">
 <h4>Beth</h4>
@@ -594,7 +594,7 @@ $(document).ready(function () {
   (function () {
     var script = document.createElement("script");
     script.type = "text/javascript";
-    script.src  = "https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML";
+    script.src  = "https://mathjax.rstudio.com/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML";
     document.getElementsByTagName("head")[0].appendChild(script);
   })();
 </script>
