added title / description

--- a/02-C-student-projects.html
+++ b/02-C-student-projects.html
@@ -545,8 +545,8 @@ div.tocify {
 </div>
 <div id="meghan" class="section level4">
 <h4>Meghan</h4>
-<p><strong>Project Title</strong></p>
-<p>Brief description of the question you want to ask and the data you have to analyze it.</p>
+<p><strong>Land Use as Driver of Aedes vector mosquito distribution in Costa Rica</strong></p>
+<p>I will assess how environmental characteristics drive Aedes aegypti and albopictus distribution by comparing field-collected mosquito data from a land use gradient, field-collected temperature and humidity data from those sites, and remote sensing data of environmental characteristics of those sites.</p>
 </div>
 <div id="nicole" class="section level4">
 <h4>Nicole</h4>
@@ -594,7 +594,7 @@ $(document).ready(function () {
   (function () {
     var script = document.createElement("script");
     script.type = "text/javascript";
-    script.src  = "https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML";
+    script.src  = "https://mathjax.rstudio.com/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML";
     document.getElementsByTagName("head")[0].appendChild(script);
   })();
 </script>
